Move last files to test folder

--- a/testFolder/toc.yml
+++ b/testFolder/toc.yml
@@ -3,3 +3,7 @@ items:
   href: blazor.md
 - name: Server
   href: server.md
+- name: Authentication
+  href: authentication.md
+- name: Docker
+  href: docker.md
