--- a/implementering/toc.yml
+++ b/implementering/toc.yml
@@ -1,4 +1,8 @@
 items:
+- name: Blazor
+  href: blazor.md
+- name: Server
+  href: server.md
 - name: Authentication
   href: authentication.md
 - name: Docker
